# ai-playground

./: CLAUDE.md  DESIGN_NOTES.md  DOCUMENTATION.md  IMPLEMENTATION_PLAN.md  PROJECT_SCAFFOLD.md  QUICK_START.md  TESTING_STRATEGY.md
.github/workflows/: ci.yml  claude-fix-ci.yml  claude.yml
schreiber-batch-inventory/: .env.example  README.md  alembic.ini  docker-compose.yml  pyproject.toml
schreiber-batch-inventory/alembic/: env.py
schreiber-batch-inventory/alembic/versions/: 001_create_batches_and_consumption.py  002_add_batch_reservations.py
schreiber-batch-inventory/app/: config.py  database.py  logging_config.py  main.py  middleware.py
schreiber-batch-inventory/app/api/: dependencies.py
schreiber-batch-inventory/app/api/v1/: batches.py  router.py
schreiber-batch-inventory/app/domain/: exceptions.py  models.py  value_objects.py
schreiber-batch-inventory/app/domain/services/: batch_service.py
schreiber-batch-inventory/app/repositories/: batch_repository.py
schreiber-batch-inventory/app/schemas/: batch.py  consumption.py  reservation.py
schreiber-batch-inventory/docker/: Dockerfile
schreiber-batch-inventory/scripts/: cli.py  simulate_concurrent_ops.py
schreiber-batch-inventory/tests/: conftest.py
schreiber-batch-inventory/tests/concurrency/: test_concurrent_consumption.py
schreiber-batch-inventory/tests/e2e/: test_batch_flows.py
schreiber-batch-inventory/tests/integration/: test_batch_api.py  test_reservations.py
schreiber-batch-inventory/tests/unit/: test_domain_logic.py  test_value_objects.py
